--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ header{
     padding-top: 2%;
 }
 
+main{
+    padding-left: 10px;
+}
+
 h1{
     font-size: 60px;
     margin-top: 25px;
@@ -35,3 +39,11 @@ h1{
     color: rgb(0, 141, 141);
 }
 
+.foto-tim{
+    height: 500px;
+    padding-top: 40px;
+}
+
+h3{
+    font-size: 15px;
+}
