--- a/style.css
+++ b/style.css
@@ -47,3 +47,18 @@ h1{
 h3{
     font-size: 15px;
 }
+
+p{
+    font-size: 20px;
+    padding-top: 30px;
+}
+
+#evidenziatore{
+    background-color: yellow;
+}
+
+ul{
+    font-size: 20px;
+    padding-top: 30px;
+    padding-left: 20px;
+}
